# dispatcher

./: .gitignore  BatchDispatcher-test.cpp  BatchDispatcher.hpp  CMakeLists.txt  Dispatcher-ndebug-test.cpp  Dispatcher-test.cpp  Dispatcher.hpp  Doxyfile  README.md  SlowDispatcher-test.cpp  SlowDispatcher.hpp
